--- a/093_eval3/.honor/README
+++ b/093_eval3/.honor/README
@@ -1,3 +1,11 @@
+Before you Begin (Extra Credit):
+================================
+Before we dive into the assignment, we want to note that there is extra
+credit on this assignment.  The extra credit is not for doing extra
+work, but rather for doing each Step in a timely fashion (by an intermediate
+deadline).   Please see the enclosed Extra-Credit.txt file for details.  
+
+
 Choose Your Own Adventure
 ===========================================================================
 
@@ -64,6 +72,16 @@ The format of an input file is as follows:
     as it was in the input file. Note that any text is legal in this
     portion of the file (there is now way any of this input can be
     invalid).
+
+Note that we provide two example stories (one written by Drew,
+and one written by Genevieve!) in the story1 and story2 directories.
+There are also a variety of other test cases available in
+
+/usr/local/ece551/cyoa/
+
+some of which are valid and some of which are not.  These other test
+cases do not really tell meaningful stories (though story1 and story2
+are also there for convenience).
 
 Step 1
 ===========================================================================
@@ -206,14 +224,13 @@ making use of functions and classes you wrote elsewhere.
 Step 3
 ===========================================================================
 
-For this step, you will be writing a program that determines
-the "story depth" of each page.  The "story depth" of a page P
-is the minimum number of other pages that a user has to see
-while reading through the story before reaching page P. The story
-depth of page 1 is always 0 (as it is the first page). Any page
-in page 1's choices (except page 1 if it were to loop back to itself)
-has story depth 1.   If you look at the data provide in story1, the
-story depths are:
+For this step, you will be writing a program that determines the
+"story depth" of each page. The "story depth" of a page P is the
+minimum number of other pages that a user has to see while reading
+through the story before reaching page P. The story depth of page 1 is
+always 0 (as it is the first page). Any page in page 1's choices
+(except page 1 if it were to loop back to itself) has story depth
+1. If you look at the data provide in story1, the story depths are:
 
 Page 1:0
 Page 2:1
@@ -230,51 +247,53 @@ Page 12:2
 Page 13:3
 Page 14:3
 
-
 Here is what your cyoa-step3 program will do:
 
- 1. As with Step 2, the program will take a directory as a command line
-    argument. It should read the input and check for errors as in Step 2
-    (good thing you wrote that code in a re-usable way, right?)
+ 1. As with Step 2, the program will take a directory as a command
+    line argument. It should read the input and check for errors as in
+    Step 2 (good thing you wrote that code in a re-usable way, right?) 
 
- 2. Determine the "story depth" of each page in the story as described above.
-    Note that some pages may not be reachable from the start, in which
-    case they have no defined story depth.  For each page (in numerical order
-    starting from page 1), if the page is reachable from the start, your
-    program should print its story depth with the following format:
+ 2. Determine the "story depth" of each page in the story as described
+    above. Note that some pages may not be reachable from the start,
+    in which case they have no defined story depth. For each page (in
+    numerical order starting from page 1), if the page is reachable
+    from the start, your program should print its story depth with the
+    following format: 
 
 Page 4:1
 
-    that is Page (number):(number) where the first number is the page number
-    and the second number is the story depth.   If the page is not reachable
-    from the start and has no story depth, your program should print
-    that information in the following format:
+    that is, Page (number):(number) where the first number is the page
+    number and the second number is the story depth. If the page is
+    not reachable from the start and has no story depth, your program
+    should print that information in the following format:
 
 Page 27 is not reachable
 
-Note that the output of cyoa-step3 for story1 should be as shown above.
+Note that the output of cyoa-step3 for story1 should be as shown
+above. 
 
-Hint 1: Think about the story as a graph (make sure you have read and understood
-        AoP Chapter 25), and think about what graph algorithm
-        makes the most sense here.
-Hint 2: In the next step you may want a similar, but slightly different graph
-        algorithm. How can you best avoid duplication of code here (AoP
-	even gives you some hints on this...)?
+Hint 1: Think about the story as a graph (make sure you have read and
+        understood AoP Chapter 25), and think about what graph algorithm
+        makes the most sense here. Especially think about how and when
+        you want to mark a node "visited."
+Hint 2: In the next step you may want a similar, but slightly
+        different graph algorithm. How can you best avoid duplication
+        of code here (AoP even gives you some hints on this...)?
 
-
-Make sure your Makefile produces cyoa-step3 (and that cyoa-step1
-and cyoa-step2 still build and run correctly). Test your program well,
-and submit before moving on to the next step. 
-
+Make sure your Makefile produces cyoa-step3 (and that cyoa-step1 and
+cyoa-step2 still build and run correctly). Test your program well, and
+submit before moving on to the next step.
 
 Step 4
 ===========================================================================
 
-For this step, you are going to write cyoa-step4 which will help you find
-all cycle-free ways to "win" a given choose your own adventure story.
-Note that this does NOT mean you are to assume the story has no cycles.
-It only means that you should print each way to win that does not repeat
-the same page.  For example, if the story had a path to win like
+For this step, you are going to write cyoa-step4 which will help you
+find all cycle-free ways to "win" a given choose your own adventure
+story. Note that this does NOT mean you are to assume the story has no
+cycles. It only means that you should print each way to win that does
+not repeat the same page. For example, if the story had a path to win
+like 
+
        +--------+
        |        |
        V        |
@@ -283,41 +302,136 @@ the same page.  For example, if the story had a path to win like
     |     |  |     |
     +-----+  +->8->9
 
-You would only report the paths that use pages 1234567 and 12345897
-as those are the two ways to win without repeating a page
-(there are infinite ways to win if you allow repeition of pages).
+You would only report the paths that use pages 1,2,3,4,5,6,7 and
+1,2,3,4,5,8,9,7 as those are the two ways to win without repeating a
+page (there are infinite ways to win if you allow repetition of
+pages).  
     
- 1. As with Steps 2 and 3, the program will take a directory as a command
-    line argument. It should read the input and check for errors as in Step
-    2 (you are really glad you wrote reusable code now, right?)
+ 1. As with Steps 2 and 3, the program will take a directory as a
+    command line argument. It should read the input and check for
+    errors as in Step 2 (you are really glad you wrote reusable code
+    now, right?)  
 
- 2. The program should then determine all possible cycle-free winning paths.
-    The paths should be reported one per line, with a format of
-    page number(choicenumber),pagenumber(choice number)...pagenumber(win)
-    For example, you program might print
+ 2. The program should then determine all possible cycle-free winning
+    paths. The paths should be reported one per line, with a format of
+    page number(choicenumber),pagenumber(choice number)...pagenumber(win)  
+    For example, your program might print:
 
 1(1),2(3),3(1),4(2),5(3),6(1),7(win)
 1(1),2(3),3(1),4(2),5(3),8(1),9(2),7(win)
 
-The first lines says you start on page 1 and select choice 1.  Then page
-2 where you select choice 3.  Next is page 3 where you select choice 1.
-This continues until page 7, where you win.
+The first lines says you start on page 1 and select choice 1. Then
+page 2 where you select choice 3. Next is page 3 where you select
+choice 1. This continues until page 7, where you win. 
 
-Note that you may print the lines in any order.  I.e., if the above answer
-is correct, then so is this answer (where the lines are the same,
-but their order has been swapped):
+Note that you may print the lines in any order. I.e., if the above
+answer is correct, then so is this answer (where the lines are the
+same, but their order has been swapped): 
 
 1(1),2(3),3(1),4(2),5(3),8(1),9(2),7(win)
 1(1),2(3),3(1),4(2),5(3),6(1),7(win)
 
-If there are no ways to win (the win page is unreachable from the start page),
-your program should instead print
+If there are no ways to win (the win page is unreachable from the
+start page), your program should instead print 
 
 This story is unwinnable!
 
-The program should still exit successfully if it prints the above message,
-which is not an error (but instead a legitimate result of the program).
+The program should still exit successfully if it prints the above
+message, which is not an error (but instead a legitimate result of the
+program).  
+
+Hint: Step 3 hinted that you want a similar but slightly different
+      graph algorithm here. Think especially about how and when you
+      want to mark nodes as "visited" in this problem, if you want to
+      find ALL cycle-free winning paths. That is, you only want to
+      avoid re-visiting a node on the same path.
 
 Make sure your Makefile produces cyoa-step4 (and that cyoa-step1,
-cyoa-step2, and cyoa-step3 still build and run correctly).
-Test your program well, and submit.
+cyoa-step2, and cyoa-step3 still build and run correctly). Test your
+program well, and submit.
+
+Code Quality
+===========================================================================
+
+Your code will also be graded for its quality. Your grader will assess the
+quality of the abstraction, naming, formatting, OOP, and documentation
+of your code. For this assignment, this means to think about:
+  - Abstraction: function length and design, .hpp/.cpp file separation
+  - Naming: class, variable, function names
+  - Formatting: standard (you can do this automatically by saving in
+    Emacs; otherwise, you should run clang-format on your source code
+    file)
+  - OOP: you have at least two classes, and their relationships,
+    fields, and methods make sense, using access specifiers and const
+    appropriately 
+  - Documentation: comment describing each of the functions you write,
+    as well as a comment if you write anything complex or unusual. 
+
+Testing
+===========================================================================
+
+We will provide a "pregrader" you can use to run your own test cases
+to make sure your code's output agrees with the output of our
+implementation. Before the deadline, when you do 'grade', the
+pregrader will look for a file testcases.txt with the following
+format: 
+
+#error
+cyoa-step1 invalid.txt
+cyoa-step2 broken1
+
+#success
+cyoa-step1 story1/page1.txt
+cyoa-step2 story1 < test1/input2.txt
+cyoa-step3 story1
+cyoa-step4 story1
+
+That is, a section with the #error header containing error test cases,
+which should give an appropriate error message and exit with a failure
+status. You are free to make your own test files.
+
+The next section has a #success header and is followed by test cases
+that should have a success status. For these the pregrader will check
+that your results match ours. Note, you must provide input files for
+what the user would type to "read" a story. For example, you might
+have a directory test1 with test inputs for story1, where there might
+be a file input2.txt with this contents: 
+
+2
+1
+
+You can easily generate test files like this by doing
+
+tee test1/input2.txt | ./cyoa-step2 story1
+
+then "reading" the story. Note that you will need to press control-D
+when you are done to indicate end of input to "tee". Your typed inputs
+will be saved to test1/input2.txt, so that you could then read the
+story like 
+
+./cyoa-step2 story1 < test1/input2.txt
+
+You may write as many test cases as you like, but you are limited to
+20 seconds of compute time by the pregrader.
+
+Reminders
+===========================================================================
+
+Before the hard deadline, your code will be graded by the pregrader
+that runs your test cases. After the hard deadline, your code will be
+graded ONCE. You may run "grade" as many times as you like, but the
+last commit after which you run grade before the deadline will be your
+submission. Grading quality takes some time, so expect your real grade
+to take about a week to come back.
+
+When testing, you should think of error cases, corner cases, and
+design your own test inputs. Your code should valgrind without errors
+on all cases and without memory leaks on all success cases.
+
+This is an INDIVIDUAL assignment. You are only allowed to communicate
+regarding this assignment with an instructor or TA.
+
+Late Policy: As with all evaluative assignments, our late policy is
+that you may resubmit for a maximum of 70% up to one week after we
+return grades. Note that this policy DOES NOT apply if you receive a
+zero on the assignment due to academic misconduct.
